tests/errors/syntax_err13.v
module a #(p = 0)
();
endmodule

